# fatoura-cli

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml  requirements.txt
src/fatoura_cli/: __init__.py  cli.py  template.html
src/fatoura_cli/web/: __init__.py
src/fatoura_cli/web/static/: invoice.js  style.css
src/fatoura_cli/web/templates/: base.html  clients.html  index.html  new_invoice.html  services.html  settings.html
