[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fatoura-cli"
version = "0.1.2"
description = "CLI for generating clean PDF invoices for Tunisian freelancers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mohamed Habib Soula" }
]
keywords = ["cli", "invoice", "tunisia", "freelancer", "pdf"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
  "jinja2>=3.1.6,<4",
  "num2words>=0.5.14,<0.6",
  "python-barcode>=0.16.1,<0.17",
  "weasyprint>=68.1,<69",
]

[project.scripts]
fatoura = "fatoura_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fatoura_cli = ["template.html"]
